base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team-bo-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: team-bo-api
  template:
    metadata:
      labels:
        app: team-bo-api
    spec:
      containers:
      - name: team-bo-api
        image: registry.ho-di.io/team-bo-api:0058dc51
        ports:
          - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 5
      imagePullSecrets:
      - name: regsecret
