base/serivce.yaml
apiVersion: v1
kind: Service
metadata:
  name: team-bo-api
spec:
  ports:
    - name: http
      port: 8080
      targetport: 8080
      protocol: TCP
  selector:
    app: team-bo-api
