base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: team-bo-api-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetport: 8080
  selector:
    app: team-bo-api
