base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: team-bo-api-host
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - bo-api.ho-di.io
      secretName: team-bo-api-cert-prod-tls
  rules:
    - host: "bo-api.ho-di.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: team-bo-api
                port:
                  number: 8080
